# netflow-analyzer

./: .env_example  .gitignore  README.md  docker-compose.yml  nfacctd.conf.tpl
goflow2/: README.md  docker-compose.yml  field-map.yaml  notes.txt
goflow2/archiver/: Cargo.toml
goflow2/archiver/src/: main.rs
goflow2/protobuf-archive/: README.md  archive_logs.py  cycle_log.sh  docker-compose.yml  field-map.yaml
goflow2/simple-archiver/: README.md  docker-compose.yml  extract_pb.py  set_perm.sh
pmacct/: .env_example  README.md  docker-compose.yml  gen-cfg.py  import-sql.sh  nfacctd.conf.tpl
pmacct/sql/: create-db.sql.tpl  create-tables.sql  wipe-db.sql
sql/: create-db.sql.tpl
