[package]
name = "archiver"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
protobuf = "2.24.0"  # or an equivalent protobuf crate
rdkafka = { version = "0.28.0", features = [] }
chrono = "0.4"
